--- a/app/index.html
+++ b/app/index.html
@@ -24,11 +24,11 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li><a ng-href="#">Now</a></li>
+          <li><a ng-href="#/">Now</a></li>
           <li><a ng-href="#/activity">Activity</a></li>
         </ul>
        
-        <h3 class="text-muted">CareTaker</h3>
+        <h3>CareTaker</h3>
       </div>
 
       <div ng-view=""></div>
@@ -52,7 +52,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/activity.js"></script>
         <!-- endbuild -->
 </body>
 </html>
