--- a/app/index.html
+++ b/app/index.html
@@ -25,16 +25,17 @@
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li><a ng-href="#/">Now</a></li>
+          <li><a ng-href="#/progression">Progression</a></li>
           <li><a ng-href="#/activity">Activity</a></li>
         </ul>
        
-        <h3>CareTaker</h3>
+        <h3 class="text-primary">CareTaker</h3>
       </div>
 
       <div ng-view=""></div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> Taking care, when you need.</p>
+        <p>Taking care, when you need.</p>
       </div>
     </div>
 
@@ -43,16 +44,22 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/angular-moment/angular-moment.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-socket-io/socket.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/moment-timezone/builds/moment-timezone-with-data-2010-2020.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="scripts/moment-timezone-data.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/activity.js"></script>
+        <script src="scripts/socket.io.js"></script>
         <!-- endbuild -->
 </body>
 </html>
